--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
 Hello World
+<!-- Yandex.Metrika informer -->
+<a href="https://metrika.yandex.ru/stat/?id=42770484&amp;from=informer"
+target="_blank" rel="nofollow"><img src="https://informer.yandex.ru/informer/42770484/1_1_FFFFFFFF_EFEFEFFF_0_uniques"
+style="width:80px; height:15px; border:0;" alt="яндекс.ћетрика" title="яндекс.ћетрика: данные за сегодн€ (уникальные посетители)" class="ym-advanced-informer" data-cid="42770484" data-lang="ru" /></a>
+<!-- /Yandex.Metrika informer -->
+
+<!-- Yandex.Metrika counter -->
+<script type="text/javascript">
+    (function (d, w, c) {
+        (w[c] = w[c] || []).push(function() {
+            try {
+                w.yaCounter42770484 = new Ya.Metrika({
+                    id:42770484,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true
+                });
+            } catch(e) { }
+        });
+
+        var n = d.getElementsByTagName("script")[0],
+            s = d.createElement("script"),
+            f = function () { n.parentNode.insertBefore(s, n); };
+        s.type = "text/javascript";
+        s.async = true;
+        s.src = "https://mc.yandex.ru/metrika/watch.js";
+
+        if (w.opera == "[object Opera]") {
+            d.addEventListener("DOMContentLoaded", f, false);
+        } else { f(); }
+    })(document, window, "yandex_metrika_callbacks");
+</script>
+<noscript><div><img src="https://mc.yandex.ru/watch/42770484" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+<!-- /Yandex.Metrika counter -->
